# StudyNotes

./: .gitignore
DX12/D3D12Research/: .gitignore  CLAUDE.md  D3D12Research.sln  D3D12Research.vcxproj  D3D12Research.vcxproj.filters  D3DUtils.h  Graphics.cpp  Graphics.h  LinearAllocator.cpp  Timer.h  UWP_Graphics.cpp  UWP_Graphics.h  UploadBuffer.h  main.cpp  shaders.hlsl  stdafx.h
DX12/D3D12Research/D3D12/: .editorconfig  BitField.h  CBT.h  ClusteredForward.cpp  ClusteredForward.h  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  D3D12.args.json  D3D12Research.natvis  D3DUtils.h  DemoApp.cpp  DemoApp.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorHandle.h  DynamicDescriptorAllocator.cpp  DynamicDescriptorAllocator.h  DynamicResourceAllocator.cpp  DynamicResourceAllocator.h  GameTimer.cpp  GameTimer.h  GpuResource.h  Graphics.cpp  Graphics.h  GraphicsResource.cpp  GraphicsResource.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Image.cpp  Image.h  Input.cpp  Input.h  Light.h  LinearAllocator.cpp  LinearAllocator.h  MathHelp.cpp  (+25 more)
DX12/D3D12Research/scripts/: externals.lua  generate_vs2019.bat  generate_vs2022.bat  premake5.lua  utility.lua
GameEngineFromWenLi/: .gitignore  CMakeLists.txt  MyAllocator.natvis  Notes.md  README.md  build.bat  build_crossguid.bat  build_ispc.bat
GameEngineFromWenLi/Empty/: EmptyApplication.cpp
GameEngineFromWenLi/Framework/Codec/: Bmp.hpp
GameEngineFromWenLi/Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  Image.hpp  ImageParser.hpp  MemoryManager.cpp  MemoryManager.hpp  main.cpp  utility.hpp
GameEngineFromWenLi/Framework/Common/Codec/: BmpParser.hpp
GameEngineFromWenLi/Framework/Common/test/: AssetLoaderTest.cpp  CMakeLists.txt
GameEngineFromWenLi/Framework/GeomMath/: CMakeLists.txt  geommath.h  geommath.hpp
GameEngineFromWenLi/Framework/GeomMath/include/: AddByElement.h  CrossProduct.h  DotProduct.h  MulByElement.h  Normalize.h  SubByElement.h  Transform.h  Transpose.h
GameEngineFromWenLi/Framework/GeomMath/ispc/: AddByElement.ispc  CMakeLists.txt  CrossProduct.ispc  DotProduct.ispc  MulByElement.ispc  Normalize.ispc  SubByElement.ispc  Transform.ispc  Transpose.ispc
GameEngineFromWenLi/Framework/GeomMath/test/: CMakeLists.txt  test.cpp
GameEngineFromWenLi/Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
GameEngineFromWenLi/Platform/: CMakeLists.txt
GameEngineFromWenLi/Platform/Empty/: EmptyApplication.cpp
GameEngineFromWenLi/Platform/Linux/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.hpp  XcbApplication.cpp  XcbApplication.hpp  helloengine_opengl.cpp  helloengine_xcb  helloengine_xcb.c
GameEngineFromWenLi/Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  Mesh.h  OpenGLApplication.cpp  OpenGLApplication.hpp  WindowsApplication.cpp  WindowsApplication.hpp  cbuffer.h  color.ps  color.vs  copy.vs  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  helloengine_opengl.cpp  helloengine_vulkan.cpp  helloengine_vulkan_test.cpp  helloengine_win.c  simple.hlsl  vectormath.h  vsoutput.hs
GameEngineFromWenLi/Platform/Windows/shaders/: frag.spv  shader.frag  shader.vert
GameEngineFromWenLi/Platform/Windows/test/: CMakeLists.txt  TextureLoadTest.cpp
GameEngineFromWenLi/RHI/: CMakeLists.txt
GameEngineFromWenLi/RHI/D2d/: CMakeLists.txt  D2dGraphicsManager.cpp  D2dGraphicsManager.hpp
GameEngineFromWenLi/RHI/D3d/: CMakeLists.txt  D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp
GameEngineFromWenLi/RHI/OpenGL/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
GameEngineFromWenLi/cmake/: TargetArchDetect.cmake  clang-cl.cmake  clang.cmake
Graphics/: Note.md  ToDo.md
Graphics/Math/: Jacobian.md  low-discrepancySequence.md
Graphics/Papers/: RealShadingInUnrealEngine4-BrianKaris.md
Graphics/Real-Time-Rendering-4th/Chapter7 Shadows/: README.md
Graphics/UnrealEngine/: DeferredShadingSceneRenderer_UE5_1.md
Graphics/Vulkan/: vulkan-tutorial.com.md
OpenGL/LearnOpenGL/PBR/: README.md  frameworkFrom.txt  reference.txt
OpenGL/LearnOpenGL/SceneGraph/: README.md
OpenGL/LearnOpenGL/Shadow/: README.md
OpenGL/LearnOpenGL/Shadow_CSM/: README.md
Others/: asset-dependency-chains.md  build-clang-llvm.md
RayTracing/RTFinalWeekend/: camera.h  estimate_halfway.cc  image2.ppm  integrate_x_sq.cc  interval.h  main.cpp  material.h  pi.cc  quad.h  rtw_stb_image.h  sphere.h
RayTracing/RTInOneWeekend/: .gitignore  CMakeLists.txt  camera.h  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
RayTracing/RTTheNextWeek/: CMakeLists.txt  aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  image.ppm  image10.ppm  image11.ppm  image12.ppm  image13.ppm  image2.ppm  image3.ppm  image4.ppm  image5.ppm  image6.ppm  image7.ppm  interval.h  main.cpp  material.h  perlin.h  ray.h  rtweekend.h  sphere.h  texture.h  vec3.h
StudyNotes/: Note.md  ToDo.md
StudyNotes/Papers/: PBSOnMobile-BrianKaris.md  RealShadingInUnrealEngine4-BrianKaris.md
StudyNotes/TempTest/src/: engine.cpp  engine.h  (+2 more)
StudyNotes/UnrealEngine/: Decal.md  DeferredShadingSceneRenderer_UE5_1.md  MeshDrawPipeline.md  RenderDependencyGraph.md
StudyNotes/Vulkan/: vulkan-tutorial.com.md
UE/: C++_17.md  C++_20.md  C++_Notes.txt  UE_Notes.txt  UE_Study.md
Vulkan/VulkanTutorial/: .gitignore  AllocateMemoryGPU.cpp  AllocateMemoryGPU.h  ConstDefine.h  ConstStruct.h  DebugMessager.cpp  DebugMessager.h  HelloTriangleApplication.cpp  HelloTriangleApplication.h  HelpUtility.cpp  HelpUtility.h  MacrosDefine.h  ParticleApplication.cpp  ParticleApplication.h  Vertex.cpp  Vertex.h  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanTest.sln  VulkanTest.vcxproj  VulkanTest.vcxproj.filters  main.cpp
读书笔记/: 5_Data.rar  Note.md
读书笔记/Real-Time-Rendering-4th/: Chapter 7 Shadows.md
(+358 files in other folders)
